# true-name

./: .gitignore  flake.nix  true-name.cabal
.github/workflows/: build.yml
docs/: license-report.md
