cabal-version:  3.0

name:           true-name
version:        0.1.0.4
synopsis:       Template Haskell hack to violate module abstractions
description:
    <http://tvtropes.org/pmwiki/pmwiki.php/Main/IKnowYourTrueName Knowing a true name gives one power over its owner>.
    .
    A Template Haskell hack to get unexported @Name@s―be they types, data
    constructors, record fields or class methods―a slightly less unsafe way
    to violate another module's abstractions than @unsafeCoerce@.
    .
    A few <https://github.com/haskell-github-trust/true-name/blob/master/test/sanity.hs quick examples>.
homepage:       https://github.com/haskell-github-trust/true-name
license:        BSD-3-Clause
license-file:   LICENSE
author:         Liyang HU
maintainer:     kris@nutty.land
copyright:      © 2014−2021 Liyang HU
category:       Data, Unsafe
build-type:     Simple
stability:      experimental
tested-with:
    GHC == 7.10.3,
    GHC == 8.0.2,
    GHC == 8.2.2,
    GHC == 8.4.1,
    GHC == 8.6.1,
    GHC == 8.8.1,
    GHC == 8.10.1

source-repository head
    type:       git
    location:   https://github.com/haskell-github-trust/true-name

common buildenv
    default-language: Haskell2010
    build-depends:
        base >= 4 && < 5,
        template-haskell >= 2.7,
    ghc-options: -Wall

library
    import: buildenv
    exposed-modules:
        Unsafe.TrueName

test-suite sanity
    import: buildenv
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: sanity.hs
    build-depends:
        containers,
        time,
        true-name,

-- vim: et sw=4 ts=4 sts=4:

